--- a/ThemeColor-Sample/Views/Cells/ColorConceptTableViewCell.xib
+++ b/ThemeColor-Sample/Views/Cells/ColorConceptTableViewCell.xib
@@ -4,37 +4,57 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ColorConceptTableViewCell" customModule="ThemeColor_Sample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="ColorConceptTableViewCell" customModule="ThemeColor_Sample" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpl-Lp-zL8">
-                        <rect key="frame" x="30" y="0.0" width="290" height="44"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V6a-8w-qeX">
+                        <rect key="frame" x="20" y="10" width="338" height="60"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSJ-LW-SUK">
+                                <rect key="frame" x="20" y="0.0" width="318" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="gSJ-LW-SUK" secondAttribute="trailing" id="21f-3U-qHB"/>
+                            <constraint firstItem="gSJ-LW-SUK" firstAttribute="leading" secondItem="V6a-8w-qeX" secondAttribute="leading" constant="20" id="J8T-bi-ZLr"/>
+                            <constraint firstAttribute="bottom" secondItem="gSJ-LW-SUK" secondAttribute="bottom" id="bAx-XY-dxq"/>
+                            <constraint firstItem="gSJ-LW-SUK" firstAttribute="top" secondItem="V6a-8w-qeX" secondAttribute="top" id="hYL-Xn-AXJ"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="qpl-Lp-zL8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9x9-KY-wIf"/>
-                    <constraint firstAttribute="trailing" secondItem="qpl-Lp-zL8" secondAttribute="trailing" id="e4c-Yo-6Y0"/>
-                    <constraint firstItem="qpl-Lp-zL8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="eu1-11-UnE"/>
-                    <constraint firstAttribute="bottom" secondItem="qpl-Lp-zL8" secondAttribute="bottom" id="oY3-68-gxA"/>
+                    <constraint firstItem="V6a-8w-qeX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="3EQ-Zl-gwe"/>
+                    <constraint firstItem="V6a-8w-qeX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KBh-gB-4MU"/>
+                    <constraint firstItem="V6a-8w-qeX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="fMQ-2P-DPd"/>
+                    <constraint firstItem="V6a-8w-qeX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qPU-d2-Rc9"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="titleLabel" destination="qpl-Lp-zL8" id="xIp-7C-MIf"/>
+                <outlet property="backView" destination="V6a-8w-qeX" id="JPH-V7-beS"/>
+                <outlet property="titleLabel" destination="gSJ-LW-SUK" id="WqJ-VJ-xJ9"/>
             </connections>
-            <point key="canvasLocation" x="110" y="87"/>
+            <point key="canvasLocation" x="150.72463768115944" y="98.4375"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
