--- a/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
+++ b/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
@@ -1,21 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AccordionColorTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="KGk-i7-Jjw" customClass="AccordionColorTableViewCell" customModule="ThemeColor_Sample" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="333" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="333" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="f4P-ci-qA1">
+                        <rect key="frame" x="32.5" y="0.0" width="268" height="76"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dsq-FT-tZC" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="dsq-FT-tZC" secondAttribute="height" id="WVI-95-WMz"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VMm-Dc-hYr" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
+                                <rect key="frame" x="96" y="0.0" width="76" height="76"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKF-Us-RJN" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
+                                <rect key="frame" x="192" y="0.0" width="76" height="76"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="f4P-ci-qA1" secondAttribute="bottom" id="Cnu-Cm-3pU"/>
+                    <constraint firstItem="f4P-ci-qA1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="NKP-74-0vS"/>
+                    <constraint firstItem="f4P-ci-qA1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xcM-qs-WL8"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="centerTileView" destination="VMm-Dc-hYr" id="979-Wx-i86"/>
+                <outlet property="leftTileView" destination="dsq-FT-tZC" id="PGJ-HN-d8l"/>
+                <outlet property="rightTileView" destination="kKF-Us-RJN" id="6HM-gI-Q5I"/>
+            </connections>
+            <point key="canvasLocation" x="36.956521739130437" y="104.46428571428571"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
