--- a/ThemeColor-Sample/Views/Storyboards/ColorConcept.storyboard
+++ b/ThemeColor-Sample/Views/Storyboards/ColorConcept.storyboard
@@ -16,16 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mTo-6u-mP2">
-                                <rect key="frame" x="0.0" y="98" width="414" height="764"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mTo-6u-mP2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="mTo-6u-mP2" secondAttribute="bottom" id="2LV-yE-jGc"/>
-                            <constraint firstItem="mTo-6u-mP2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="gHb-cL-yQs"/>
+                            <constraint firstItem="mTo-6u-mP2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="gHb-cL-yQs"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mTo-6u-mP2" secondAttribute="trailing" id="tKq-NV-wSU"/>
                             <constraint firstItem="mTo-6u-mP2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="y0i-h9-3na"/>
                         </constraints>
