--- a/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
+++ b/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -39,7 +40,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QOz-0H-Jdp">
-                        <rect key="frame" x="15" y="75.5" width="303" height="0.5"/>
+                        <rect key="frame" x="40" y="75.5" width="253" height="0.5"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="ibt-V1-pKj"/>
@@ -48,10 +49,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="f4P-ci-qA1" secondAttribute="bottom" constant="5" id="Cnu-Cm-3pU"/>
-                    <constraint firstAttribute="trailing" secondItem="QOz-0H-Jdp" secondAttribute="trailing" constant="15" id="HbA-Yl-E9l"/>
                     <constraint firstItem="f4P-ci-qA1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="NKP-74-0vS"/>
+                    <constraint firstItem="QOz-0H-Jdp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="alf-j7-bGO"/>
                     <constraint firstAttribute="bottom" secondItem="QOz-0H-Jdp" secondAttribute="bottom" id="bcM-LP-2bs"/>
-                    <constraint firstItem="QOz-0H-Jdp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="sXl-Zz-wcD"/>
+                    <constraint firstItem="QOz-0H-Jdp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="sXl-Zz-wcD"/>
                     <constraint firstItem="f4P-ci-qA1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="xcM-qs-WL8"/>
                 </constraints>
             </tableViewCellContentView>
